# kokovp

./: .clang-format  CMakeLists.txt  KokoVP_ru_RU.ts  README.md  autohidewidget.cpp  autohidewidget.h  cache.cpp  cache.h  config.cpp  config.h  extensions.cpp  extensions.h  helper.cpp  helper.h  icons.qrc  kokovp.cpp  kokovp.desktop  kokovp.h  main.cpp  mpv_qthelper.hpp  mpvwidget.cpp  mpvwidget.h  optionsmodel.cpp  optionsmodel.h  playercontroller.cpp  playercontroller.h  playerwidget.cpp  playerwidget.h  program_arg.cpp  program_arg.h  singleinstance.cpp  singleinstance.h  tracksmenu.cpp  tracksmenu.h
actions/: actionwrapper.cpp  actionwrapper.h  bistableaction.cpp  bistableaction.h  incdecactions.cpp  incdecactions.h  incdecwheelaction.cpp  incdecwheelaction.h  seekinterface.cpp  seekinterface.h  timelabelaction.cpp  timelabelaction.h  timeslider.cpp  timeslider.h  timeslideraction.cpp  timeslideraction.h  volumeslideraction.cpp  volumeslideraction.h
icons/: res.qrc
icons/kokovp-default/: index.theme
persistency/: filehash.cpp  filehash.h  filesettingshash.cpp  filesettingshash.h
playlist/: m3ucodec.cpp  m3ucodec.h  playlist.cpp  playlist.h  playlistmodel.cpp  playlistmodel.h  plscodec.cpp  plscodec.h  xspfcodec.cpp  xspfcodec.h
prefs/: prefadvanced.cpp  prefadvanced.h  prefadvanced.ui  prefappearance.cpp  prefappearance.h  prefappearance.ui  prefdialog.cpp  prefdialog.h  prefextfile.cpp  prefextfile.h  prefextfile.ui  prefinput.cpp  prefinput.h  prefinput.ui  prefmain.cpp  prefmain.h  prefmain.ui  prefscreenshots.cpp  prefscreenshots.h  prefscreenshots.ui  prefsection.h  qactionlistmodel.cpp  qactionlistmodel.h  seekwidget.cpp  seekwidget.h  shortcuteditordelegate.cpp  shortcuteditordelegate.h
